STELLA, CHANGES

#### 0.7.5 (2009-11-??) ###############################

* FIXED: Correctly capture exceptions in Client

#### 0.7.4 (2009-11-11) ###############################

* FIXED: Proper handling for timeout errors
* CHANGE: Log directory is now YYYYMMDD-HH-mm-ss-SHA1
* ADDED: Logging to .stella/log
* ADDED: Global variables via --var
* ADDED: Using naive CSV parsing via quickcsv (CSV lib is slooow for large files)
* ADDED: Testplan file cache (load a file only once)


#### 0.7.3 (2009-10-30) ###############################

* FIXED: warning: regexp match /.../n against to UTF-8 string
* ADDED: Arrival rate
* ADDED: Added HTTP auth per request


#### 0.7.2 (2009-10-29) ###############################

* FIXED: bin/stella exits with 1 if any request fails. 
* CHANGE: sequential and rsequential resourcing is now global
  across all clients. 
* ADDED: Automatic form parsing for html pages
* ADDED: Container now has params and headers from the request
* ADDED: Assume HTTP response codes >= 400 are failed requests 
  unless a response block is defined for that status in which 
  case the block must return fail. 
* ADDED: Support for HTTP Basic authentication
* ADDED: Templating for resources parameters and headers. 
* ADDED: Built-in variable :HOSTNAME can be overriden by CLI argument. 
* ADDED: Automatic JSON parsing in response blocks (as 'doc')


#### 0.7.1 (2009-10-21) ###############################

NOTE: Complete rewrite. Features include:

* New internal architecture. 
* Improved stability and output for high thread loads. 
* Updated configuration syntax
* Granular reporting via Benelux


#### 0.6.0 (2009-03-15) ###############################

http://github.com/solutious/stella/tree/0.6

* COMPLETE REWRITE!
  * The commands and API from 0.5.x are no longer supported. This ain't your grandmother's Stella.
* NEW: Tests are now defined using a DSL. See tryouts/dsl_tryout.rb for an example. 